--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -2073,6 +2073,9 @@
             },
             "dnsHole": {
               "label": "DNS Hole Data"
+            },
+            "sessionCleanup": {
+              "label": "Session Cleanup"
             }
           }
         },
