wip: highly improve request handler, add request handlers for calendar, media-server, indexer-manager and more, add support for multiple inputs from job handler creator

--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -2123,8 +2123,11 @@
             "downloads": {
               "label": "Downloads"
             },
-            "mediaRequests": {
-              "label": "Media Requests"
+            "mediaRequestStats": {
+              "label": "Media Request Stats"
+            },
+            "mediaRequestList": {
+              "label": "Media Request List"
             },
             "rssFeeds": {
               "label": "RSS feeds"
