fix: add beforeunload logic for board in edit mode

--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -1563,6 +1563,10 @@
             "title": "Unable to apply changes",
             "message": "The board could not be saved"
           }
+        },
+        "confirmLeave": {
+          "title": "Unsaved changes",
+          "message": "You have unsaved changes, are you sure you want to leave?"
         }
       },
       "oldImport": {
