fix: rename default to home board (#1538)

--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -2075,8 +2075,8 @@
           },
           "board": {
             "title": "Boards",
-            "defaultBoard": {
-              "label": "Global default board",
+            "homeBoard": {
+              "label": "Global home board",
               "description": "Only public boards are available for selection"
             }
           },
