wip: add context specific search

--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -2654,7 +2654,8 @@
             }
           }
         }
-      }
+      },
+      "home": {}
     },
     "engine": {
       "search": "Find a search engine",
