feat: notification system

--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -2150,6 +2150,9 @@
             },
             "sessionCleanup": {
               "label": "Session Cleanup"
+            },
+            "notifications-fetcher": {
+              "label": "Notifications fetcher"
             }
           }
         },
