feat: add context specific search and actions (#1570)

--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -1159,6 +1159,9 @@
         "automationId": {
           "label": "Automation ID"
         }
+      },
+      "spotlightAction": {
+        "run": "Run {name}"
       }
     },
     "calendar": {
@@ -2450,6 +2453,9 @@
       "command": {
         "help": "Activate command mode",
         "group": {
+          "localCommand": {
+            "title": "Local commands"
+          },
           "globalCommand": {
             "title": "Global commands",
             "option": {
@@ -2556,6 +2562,13 @@
                 "label": "Community Discord"
               }
             }
+          }
+        }
+      },
+      "home": {
+        "group": {
+          "local": {
+            "title": "Local results"
           }
         }
       },
