feat: add color scheme and language option to onboarding, add previous button

--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -106,7 +106,8 @@
           "docs": "Read the documentation"
         }
       }
-    }
+    },
+    "backToStart": "Back to start"
   },
   "user": {
     "title": "Users",
@@ -798,6 +799,12 @@
     "iconPicker": {
       "label": "Icon URL",
       "header": "Type name or objects to filter for icons... Homarr will search through {countIcons} icons for you."
+    },
+    "colorScheme": {
+      "options": {
+        "light": "Light",
+        "dark": "Dark"
+      }
     },
     "information": {
       "min": "Min",
